# ClearCut

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  evaluation_results.csv  main.py  pyproject.toml  requirements.txt
app/: pipeline.py  test.py
app/core/: video_utils.py
app/services/: eval.py  he.py  segmentation.py  summarizer.py  transcription.py  vision_analysis.py
backend/: Dockerfile  requirements.txt
backend/app/: main.py  runner.py
backend/app/api/: jobs.py  upload.py
backend/app/core/: config.py  job_store.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: job-card.tsx  outputs-panel.tsx  upload-zone.tsx
frontend/src/components/aceternity/: gradient-card.tsx  grid-background.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx
frontend/src/pages/: Home.tsx  JobDetail.tsx
video_condenser/: .env.example  README.md  __init__.py  app_streamlit.py  main.py  requirements.txt
video_condenser/config/: __init__.py  settings.py
video_condenser/pipeline/: __init__.py  audio_extractor.py  clip_extractor.py  embedding_engine.py  matcher.py  merger.py  summarizer.py  transcriber.py
video_condenser/utils/: __init__.py  chunk_utils.py  logging_config.py
